# lunaris

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  all_tracked_files.txt  config.py  environment.yml  fix_imports.py  main.py  mc_runner.py  pyproject.toml  refactor_manager.py  refactor_plotting.py  refactor_ui.py  rename_script.py  requirements.txt  requirements_hpc.txt  studio.py  suspicious.txt  temp_matches.txt  ui.py
.git_backup/: COMMIT_EDITMSG  config  index
AIAA SciTech/: generate_publication_plots.py  generate_publication_plots_v2.py
LATEX/: main.aux  main.bbl  main.bcf  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  preamble.tex  references.bib
analysis/: __init__.py  compare_gravity_models.py  formatting.py  mc_analysis.py  mc_plotting.py  plotting.py  postprocess.py  report_manager.py  styling.py  threeD_animation.py
cli/: __init__.py  common_args.py
common/: __init__.py  constants.py  math_utils.py  montecarlo_defs.py  time_utils.py  type_defs.py
core/: __init__.py  dynamics.py  events.py  mc_backend_policy.py  mc_propagator.py  monte_carlo_engine.py  propagator.py  state.py  torch_batch_propagator.py
data/: README.md  data_sources.json
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  CONFIG_AND_ARTIFACT_CONTRACTS.md  DATASET_PIPELINE.md  HPC.md  PERTURBATION_BUDGET.md  REPRODUCIBLE_BENCHMARKS.md  profiling.md
hpc/: env_template.sh  slurm_benchmark_gpu.sbatch  slurm_mc_array.sbatch  slurm_train_stlrps.sbatch
loaders/: __init__.py  io_gravity.py  io_helpers.py  io_surface.py  spice_builder.py
models/: __init__.py  ephemeris.py  gravity_adapter.py  relativity_effects.py  solar_effects.py  spherical_harmonics.py  surface_effects.py  surrogate_gravity.py  third_body_effects.py
resume_denemesi/: config.json
slurm_examples/: eval_st_lrps.slurm  mc_runner.slurm  orbit_validation.slurm  train_st_lrps.slurm
st_lrps/: __init__.py  spatial_cloud_parameters.py  st_lrps_engine.py  st_lrps_models.py  st_lrps_train.py  test_st_lrps.py  test_st_lrps_artifacts.py  test_st_lrps_fixes.py  ui_st_lrps.py
surrogate_gravity_model/: dataset_parameters.py  run_ablation_matrix.py  spatial_cloud_generator.py  spatial_cloud_parameters.py  st_lrps_artifacts.py  st_lrps_config.py  st_lrps_data.py  st_lrps_engine.py  st_lrps_evaluate.py  st_lrps_force_model.py  st_lrps_losses.py  st_lrps_metrics.py  st_lrps_models.py  st_lrps_scaling.py  test_st_lrps.py  test_st_lrps_fixes.py  ui_st_lrps.py
tasks/: todo.md
tests/: conftest.py  dataset_pipeline_test_utils.py  st_lrps_contract_test_utils.py  test_analysis_reorg.py  test_artifact_contract.py  test_artifact_hygiene.py  test_benchmark_config.py  test_benchmark_contract_compatibility.py  test_benchmark_pipeline_smoke.py  test_benchmark_provenance.py  test_benchmark_validation.py  test_cleanup_pass.py  test_common_refactor.py  test_core_cleanup.py  test_core_regressions.py  test_data_downloader.py  test_dataset_splits.py  (+74 more)
(+348 files in other folders)
